--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,8 @@ header h1 .seo {
     color: #d9dcd6;
 }
 
-.   padding-top: 15px;
+header nav {
+    padding-top: 15px;
     margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
