--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ header h1 .seo {
     color: #d9dcd6;
 }
 
-header nav {
+ nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +32,9 @@ header nav {
     font-size: 20px;
 }
 
-header div ul {
-    list-style-type: none;
-}
+ 
 
-.header div ul li {
+h nav a {
     display: inline-block;
     margin-left: 25px;
 }
