changes to sections and asides

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,7 @@ header h1 {
 header h1 .seo {
     color: #d9dcd6;
 }
+/* reduced css to use nav */
 
  nav {
     padding-top: 15px;
@@ -33,10 +34,14 @@ header h1 .seo {
 }
 
  
-
+/* removed ul li and added nav a element*/
 h nav a {
     display: inline-block;
     margin-left: 25px;
+}
+nav a:hover {
+    color: gray
+    text-decoration; 
 }
 
 a {
@@ -132,25 +137,8 @@ p {
     max-width: 150px;
 }
 
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
+/* make note*/ 
+.content div {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
