--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,7 +87,7 @@ p {
 
 
 
-.benefits {
+.benefits  {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -96,29 +96,21 @@ p {
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
+    
 }
 
 .benefits section {
     margin-bottom: 32px;
     color: #ffffff;
+    
 }
 
-
-
-.benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
 
 .benefit-brand h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
 
 
 .benefit img {
@@ -128,24 +120,25 @@ p {
 }
 
 /* make note*/ 
-/* .content div {
+ .service {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
-} */
-
-.search-engine-optimization img {
+}
+/*changed id tag symbols*/
+#search-engine-optimization img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
+
+#online-reputation-management img {
     max-height: 200px;
 }
 
-.social-media-marketing img {
+#social-media-marketing img {
     max-height: 200px;
 }
 
